<resources>
    <string name="app_name">AstonFive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="name">Name:</string>
    <string name="name_contact">NAME_CONTACT</string>
    <string name="surname">Surname:</string>
    <string name="phone">Phone:</string>
    <string name="save">Save</string>
    <string name="search_contact">search contact</string>
</resources>